src/style.scss
$bp-tablet: 600px;
$bp-desktop: 900px;
$bp-super: 1200px;

$font-weight: 400;
$font-weight-bold: 700;

$link-border-width: 0.2rem;

@mixin prefer-light {
  --bg-color: #e9e9e9;
  --border-color: #ccc;
  --cta-color: #e24350;
  --cta-fg-color: #e9e9e9;
  --fg-color: #333333;
  --tag-bg-color: #e9e9e9;
}

@mixin prefer-dark {
  --bg-color: #333333;
  --border-color: #999;
  --cta-color: #e24350;
  --cta-fg-color: #e9e9e9;
  --fg-color: #e9e9e9;
  --tag-bg-color: #e9e9e9;
}

:root {
  font-family: 'Iosevka Custom', monospace;
  font-size: 12pt;
  font-weight: 400;

  @include prefer-light;

  @media (prefers-color-scheme: dark) {
    @include prefer-dark;
  }
}

html,
body {
  background-color: var(--bg-color);
  color: var(--fg-color);

  padding: 0;
  margin: 0;

  .color-light {
    @include prefer-light;
  }

  .color-dark {
    @include prefer-dark;
  }
}

@mixin link($color: var(--cta-color)) {
  border-bottom: $link-border-width solid $color;
  color: $color;
  text-decoration: none;
}

@mixin link-hover {
  cursor: pointer;

  &:hover {
    border-bottom-color: var(--bg-color);
  }
}

a {
  @include link;
  @include link-hover;
}

h1 {
  font-size: 2rem;
  font-weight: $font-weight-bold;
  line-height: 1.4em;
  margin: 0;
  padding: 0;
}

h2 {
  font-size: 1.4rem;
  font-weight: $font-weight-bold;
  line-height: 1em;
  margin: 0;
  padding: 0;
}

h3 {
  font-size: 1rem;
  font-weight: $font-weight-bold;
  line-height: 1em;
  margin: 0;
  padding: 0;
}

p {
  line-height: 1.5em;
  margin: 1rem 0;
}

em {
  font-style: italic;
}

strong {
  font-weight: 700;
}

ul {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style-position: inside;
  list-style-type: square;
  padding: 0;
}

li {
  line-height: 1.5rem;
}

.cta {
  color: var(--cta-color);
  text-transform: uppercase;
}

main {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;

  @media (min-width: $bp-tablet) {
    gap: 2rem;
    padding: 2rem;
  }
}

#top {
  header h1 {
    display: flex;
    flex-direction: column;

    @media (min-width: $bp-desktop) {
      display: initial;
    }
  }
}

#skills {
  .data-view {
    .filter {
      header {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 0.2rem 0.4rem;
      }
    }

    .tags {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      gap: 0.5rem;
    }

    .tag {
      border-radius: 0.3rem;
      border-width: 0;
      padding: 0.2rem 0.4rem;

      &.active {
        background-color: var(--cta-color);
        color: var(--cta-fg-color);
      }
    }

    .data {
      border-bottom: solid 0.2rem var(--border-color);
      border-top: solid 0.2rem var(--border-color);
      display: grid;
      gap: 1.5rem;
      grid-template-columns: 1fr;
      list-style: none;
      padding: 2rem 0;

      @media screen and (min-width: $bp-tablet) {
        grid-template-columns: 1fr 1fr;
      }

      @media screen and (min-width: $bp-desktop) {
        grid-template-columns: 1fr 1fr 1fr;
      }

      @media screen and (min-width: $bp-super) {
        grid-template-columns: 1fr 1fr 1fr 1fr;
      }

      .description {
        font-size: 0.8rem;
      }

      .tags {
        font-size: 0.8rem;
        padding: 0.1rem 0.2rem;
      }
    }

    @media (min-width: $bp-tablet) {
      display: flex;
      flex-direction: row;
      gap: 2rem;

      .filter {
        flex-direction: column;
        margin: 1rem 0;

        header {
          display: initial;
          padding: 0;
          margin-bottom: 0.5rem;
        }
      }

      .data {
        border-bottom-width: 0;
        border-left: solid 0.2rem var(--border-color);
        border-top-width: 0;
        padding: 0 0 0 2rem;
      }
    }
  }
}

#color {
  position: absolute;
  right: 2rem;
  top: 2rem;

  button {
    background: none;
    border: none;
    color: var(--fg-color);
    cursor: pointer;
    display: block;

    svg {
      display: block;
      fill: var(--fg-color);
      height: 100%;
      width: 2rem;
    }
  }
}

